# mure

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml
examples/: example.py
multirequests/: __init__.py  dtos.py
mure/: __init__.py  cache.py  consumption.py  core.py  dtos.py  iterator.py  logging.py  models.py  queue.py  utils.py
mure/cache/: __init__.py  core.py  queries.sql  storage.py
tests/: test_cache.py  test_multirequests.py  test_mure.py
