[tool.poetry]
name = "mure"
version = "0.4.0"
description = "Perform multiple HTTP requests in parallel – without writing boilerplate code or worrying about async functions."
authors = ["Severin Simmler <s.simmler@snapaddy.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = { extras = ["speedups"], version = "^3.8.3" }
orjson = "^3.8.5"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
isort = "^5.11.4"
pycln = "^2.1.2"
pytest = "^7.2.0"
pre-commit = "^3.0.3"

[tool.black]
line-length = 99

[tool.isort]
line_length = 99
use_parentheses = true
include_trailing_comma = true
multi_line_output = 3

[tool.pycln]
all = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
