[tool.poetry]
name = "mure"
version = "0.7.0a0"
description = "Perform multiple HTTP requests in parallel – without writing boilerplate code or worrying about async functions."
authors = ["Severin Simmler <s.simmler@snapaddy.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = { extras = ["speedups"], version = "^3.8.5" }
orjson = "^3.9.7"
typing-extensions = { version = "^4.7.1", python = "<3.11" }

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
pycln = "^2.2.2"
pytest = "^7.4.1"
pre-commit = "^3.4.0"

[tool.black]
line-length = 99

[tool.isort]
line_length = 99
use_parentheses = true
include_trailing_comma = true
multi_line_output = 3

[tool.pycln]
all = true
exclude = "__init__.py"

[tool.ruff]
line-length = 99
exclude = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
